# RPGalaxy

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  README_PRECOMPUTED.md
src/: constants.h  galaxy.c  galaxy.h  galaxy_precomputed.h  graphics.c  graphics.h  input.c  input.h  main.c  opl.h  physics.c  physics.h  sprites.c  sprites.h  tables.h
src/backup/: fixedmath.c  fixedmath.h  galaxy.c  galaxy.h  galaxy_precomputed.c  main_precomputed.c  palette.c  palette.h  physics.c  physics.h
tools/: gen_enemy.py  gen_reticle.py  gen_tables.py  gen_worker.py  generate_galaxy.py
